--- a/Assignment_2_Visualizing_Attention_Mechanisms_in_a_Pretrained_Model.ipynb
+++ b/Assignment_2_Visualizing_Attention_Mechanisms_in_a_Pretrained_Model.ipynb
@@ -155,7 +155,7 @@
         "outputs = model(input_ids, attention_mask=attention_mask)\n",
         "\n",
         "# Extract attention weights\n",
-        "attentions = outputs.attentions  # Tuple: (num_layers, batch_size, num_heads, seq_len, seq_len)\n",
+        "attentions = outputs.attentions \n",
         "\n",
         "\n"
       ],
